# AITestPlatform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.vpn.yml  docker-compose.yml  run.sh
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2e76d9148d72_add_roles_and_user_roles.py  3a237ec14c38_add_chat_sessions_and_chat_messages_.py  4e65e2347e14_add_requirement_documents_table.py  886dcd584e23_add_llm_configs_table.py  8e4b52990395_add_projects_and_project_members.py  a1b2c3d4e5f6_add_exec_result_to_testcases.py  a1b2c3d4e5f8_add_chat_sessions_chat_context.py  a7b2c8d1e4f5_add_test_data_tables.py  ae7e2749b8d6_add_users_table.py  b2c4e6a8d0f1_add_module_id_to_ai_generation_batches.py  b3f8e9a1c5d2_add_chat_messages_skill_invocation_id.py  c3d5f7a9b1e2_add_case_no_to_testcases.py  c5e7f9a0b1d3_phase3_m1_baseline.py  cd89345db2e1_add_ai_reviews_table.py  d3c8a2b6f410_add_ui_execution_tables.py  d80326b76bad_add_testcase_modules_and_generation_.py  d9b1c2e4f5a6_add_testcases_tags.py  e1f2a3b4c5d6_add_entry_path_to_testcase_modules.py  e4cfdc00aa57_initial_base_model.py  f1e2d3c4b5a6_add_ui_test_environments_and_preconditions.py  f3a4b5c6d7e8_add_http_login_to_precondition_check.py  f7a8b9c0d1e2_add_skills_tables.py  fce3a67fa330_add_prompt_templates_and_versions.py
backend/app/: config.py  database.py  main.py
backend/app/core/: crypto.py  deps.py  exceptions.py  response.py  security.py
backend/app/models/: base.py
backend/scripts/: validate_skill.py
backend/tests/: conftest.py
backend/tests/cleanup/: test_scheduler.py  test_test_data_cleanup.py  test_ui_cleanup.py
backend/tests/dashboard/: test_ui_stats.py
backend/tests/llm/: test_chat_message_kind.py  test_chat_session_pending_summary.py  test_providers_timeout.py  test_system_event_service.py
backend/tests/skills/: test_built_in.py  test_case_matcher.py  test_env_priority.py  test_http_tools.py  test_importer_exporter.py  test_intent_classifier.py  test_models.py  test_openclaw_compat.py  test_parser.py  test_platform_tools.py  test_router_intent_guard.py  test_router_skills.py  test_run_ui_test_blocked.py  test_safe_invoke.py  test_safety.py  test_safety_scanner.py  test_script_tools.py  test_service_task124.py  test_skill_e2e_http.py  test_skill_fs_tools.py  test_skill_router.py  test_task126_activated.py  test_triggers.py  test_ui_automation_plan_builder.py  test_ui_automation_schemas.py  test_ui_automation_tools.py  test_zero_intrusion.py
backend/tests/test_data/: test_import.py  test_permissions_wiring.py  test_random_generator.py  test_service_helpers.py
backend/tests/testcases/: test_excel_io.py
backend/tests/ui_automation/: _fake_mcp_server.py  test_ai_login_runner.py  test_captcha.py  (+24 more)
(+263 files in other folders)
