[project]
name = "aitest-platform"
version = "0.1.0"
description = "AI-driven test management platform backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.12",
    "bcrypt>=5.0.0",
    "openai>=2.33.0",
    "python-docx>=1.2.0",
    "pypdf>=6.10.2",
    "mcp>=1.27.0",
    "playwright>=1.59.0",
    "ddddocr>=1.6.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
# auto 模式：所有 async def test_* 自动当 asyncio 测试，无需逐个 @pytest.mark.asyncio
asyncio_mode = "auto"
testpaths = ["tests"]
